# tuxc

./: .cspell.json  README.md  dangerfile.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: action-lint.yaml  analysis-ci.yaml  backend-ci.yaml  frontend-ci.yaml
analysis/: pyproject.toml
analysis/src/tuxc/: cli.py  gpx_compressor.py
analysis/tests/: test_version.py
analysis/tuxc/: __init__.py  cli.py  gpx.py  gpx_compressor.py  jpx.py
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(app)/edit/: page.tsx
app/(app)/rpp/: page.tsx
app/(app)/runs/: page.tsx
app/(app)/town-lines/: page.tsx
app/api/runs/: maps.ts  route.ts  runs.json
app/components/: dropdown.tsx  edit-form.tsx  edit-run-form.tsx  loading-box.tsx  loading-run-views.tsx  run-form.tsx  run-map-pin.tsx  run-map-view.tsx  run-maps-view.tsx  run-thumbnail.tsx  run-view.tsx  sort-dropdown.tsx  submit-run-form.tsx  trail-toggle-group.tsx
app/db/: maps.ts  runs.json
app/db/geos/: intersections.json  town-line-poly.json
app/db/jpx/: 09-red-line.json  1500-meter-pond-short.json  1500-meter-pond.json  arboretum-x-jp.json  around-the-fells.json  ass-canyon.json  bbb.json  belmont-hill.json  bfl.json  boston-massacre.json  boston-tour.json  brattle-street.json  broadwash.json  bu-bridge-fake-10.json  castle-black.json  cemetery.json  charles-street.json  dea-pond.json  donut-run-deluxe.json  double-mid-res.json  enforcer.json  extended-cemetery.json  extended-chips.json  extended-harvard.json  extra-short-freedom-trail.json  far-tower-to-firehouse.json  fells-n-chips.json  femepond-charles-bfl.json  fries.json  (+34 more)
app/widgets/: button.tsx  common-icon.tsx  dropdown.tsx  initials.tsx  link-button.tsx  link-text.tsx  loading-run-views.tsx  nav.tsx  submit-button.tsx  textbox.tsx
dictionaries/: other.txt  routes.txt
gpx/: 09-red-line.gpx  09-spy-line.gpx  1500-meter-pond-short.gpx  1500-meter-pond.gpx  2-central.gpx  6-mile-bike-path.gpx  86th-street.gpx  96-straight-street.gpx  alewife-greenway.gpx  animals.gpx  aquarium.gpx  arboretum-x-jp.gpx  arlington-to-alewife.gpx  around-the-fells.gpx  art-museum.gpx  ass-canyon.gpx  battle-road.gpx  bbb.gpx  bc-res.gpx  belmont-hill.gpx  belmont-lakes.gpx  belmont.gpx  bernies-great-meadow.gpx  bfl.gpx  bike-lakes.gpx  boat-house.gpx  boston-massacre.gpx  boston-tour.gpx  brattle-street.gpx  broadwash.gpx  brooks-estate.gpx  bu-bridge-fake-10.gpx  bu-fake-10.gpx  bunker-hill.gpx  butler-canal.gpx  c-loop.gpx  castle-black.gpx  cemetery-gantcher.gpx  cemetery-ossipee.gpx  cemetery.gpx  (+153 more)
jpx/: 09-red-line.json  09-spy-line.json  art-museum.json  battle-road.json  butler-canal.json  cemetery-gantcher.json  cemetery-ossipee.json  chips-glam.json  extended-cemetery-gantcher.json  extended-chips.json  fresh-pond-2-laps-gantcher.json  fresh-pond-gantcher.json  fresh-pond-ossipee.json  green-aurora.json  interlaken-cap-hill.json  interlaken-wallingford.json  lakes.json  long-glam-ossipee.json  lookout-wallingford.json  main-street.json  medford-square.json  mid-res.json  mystic-stoplight-cooldown.json  near-tower.json  ravenna.json  short-glam-gantcher.json  short-glam-ossipee.json  short-res.json  two-bridges.json  volunteer-park.json  west-med.json  wetlands.json
public/: about.txt
(+132 files in other folders)
