[tool.poetry]
authors = ["Chris Gregory <christopher.b.gregory@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
description = "Athlete-run home of Tufts cross country."
keywords = ["tuxc"]
license = "Apache Software License"
name = "tuxc"
readme = "../README.md"
repository = "https://github.com/gregorybchris/tuxc"
version = "0.1.0"

[[tool.poetry.packages]]
include = "tuxc"

[tool.poetry.dependencies]
click = "^8.1.7"
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.3"
ruff = "^0.7.1"
semver = "^3.0.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
tuxc = "tuxc.cli:main"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
src = ["tuxc"]

[tool.ruff.lint]
ignore = ["D100", "D104", "FIX002", "TD002", "TD003"]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "E",
    "EM",
    "ERA",
    "F",
    "FIX",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PL",
    "PT",
    "PTH",
    "PLR",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TCH",
    "TD",
    "TID",
    "W",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = ["SLF", "PLR2004"]
