[project]
authors = [
    { name = "Chris Gregory", email = "christopher.b.gregory@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["click>=8.2.0", "pydantic>=2.11.4", "rich>=14.0.0"]
description = "Athlete-run home of Tufts cross country."
keywords = ["tuxc"]
name = "tuxc"
readme = "../README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.urls]
Repository = "https://github.com/gregorybchris/tuxc"

[project.scripts]
tuxc = "tuxc.cli:main"

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.11.10", "semver>=3.0.4"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
ignore = ["D100", "D104", "FIX002", "TD002", "TD003"]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "E",
    "EM",
    "ERA",
    "F",
    "FIX",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PL",
    "PT",
    "PTH",
    "PLR",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TCH",
    "TD",
    "TID",
    "W",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = ["SLF", "PLR2004"]
